Only the first word of the each sentence should be capitalized #166
- Nav and Headline content is unchanged
- Select menus with entity type (Sole Proprietorship, etc.) is unchanged
- Normally capitalized content 9State, Country, Language, etc.) is unchanged
- Select menus containing UPPERCASE countries have been changed

--- a/gridview_all.html
+++ b/gridview_all.html
@@ -169,7 +169,7 @@
                             <h1 id="filingtable">Filing Basis</h1>
                         </div>
                         <div class="col-xs-4">
-                            <label for="pagelayout">Page Layout</label>
+                            <label for="pagelayout">Page layout</label>
                             <select class="form-control" id="pagelayout">
                               <option value="Select">Select</option>
                               <option value="guided">Guided</option>
@@ -361,10 +361,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
             	<div class="row">
                     <div class="col-xs-6">
-                        <span id="webPolicy"><p>Website Policy</p></span>
+                        <span id="webPolicy"><p>Website policy</p></span>
                     </div>
                     <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
