--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -184,7 +184,7 @@
                                         <label class="form-check-label form-check" for="tradeserv" id="tradeserv2"><span class="radio notspecial">Trademark / Servicemark</span></label>
                                     </div>
                                     <div role="heading" aria-level="3">
-                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for Uncommon Mark Types</button>
+                                        <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#markoptions" aria-controls="markoptions" aria-expanded="false" id="optionsbtn"><span class="glyphicon glyphicon-triangle-right"></span><span  class="toggleglyph glyphicon glyphicon-triangle-bottom visuallyremoved"></span> Expand for uncommon mark types</button>
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion form-group form-group-md">
@@ -599,10 +599,10 @@
                     <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
