--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                     <p class="required"><span class="weight600">&#42; = Required</span></p>
-                    <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                    <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
                     <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                         <label class="switch">
                         <input class="togglesavemore" type="checkbox">
@@ -223,7 +223,7 @@
                                               </div>
                                             </div>
                                             <div class="col-xs-12">
-                                                <button type="button" class="btn-sm btn-success fill" id="autofill">Fill from Contacts</button>
+                                                <button type="button" class="btn-sm btn-success fill" id="autofill">Fill from contacts</button>
                                             </div>
                                             <div class="row">
                                                 <div class="col-xs-12">
@@ -282,13 +282,13 @@
                                                         <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignbahamas">
                                                           <option value="Select">Select</option>
-                                                          <option value="soleforeign">Sole Proprietorship</option>
+                                                          <option value="soleforeign">Sole proprietorship</option>
                                                           <option value="corpforeign">Corporation</option>
                                                           <option value="domestic">Domestic Limited Companies</option>
                                                           <option value="expartnership">Exempted Limited Partnership</option>
                                                           <option value="international">International Business Company</option>
                                                           <option value="duration">Limited Duration Company</option>
-                                                          <option value="liabilitco">Limited Liability Company</option>
+                                                          <option value="liabilitco">Limited liability company</option>
                                                           <option value="liabilitpart">Limited Liability Partnership</option>
                                                         </select>
                                                     </div>
@@ -296,7 +296,7 @@
                                              </div>
                                          </div>
                                         <div class="col-xs-12">
-                                            <button type="button" class="btn-sm btn-success fill" id="autofillforeign">Fill from Contacts</button>
+                                            <button type="button" class="btn-sm btn-success fill" id="autofillforeign">Fill from contacts</button>
                                         </div>
                                         <div class="row">
                                             <div class="col-xs-12">
@@ -357,7 +357,7 @@
                         <div id="collapse2" class="panel-collapse collapse" aria-labelledby="contactsbtn">
                             <table class="list-group table">
                                 <tr class="row">
-                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear Form</a></td>
+                                    <td class="list-group-item col-xs-6"><a href="#" class="fromcontactclear" id="clearform">Clear form</a></td>
                                     <td class="list-group-item inner-addon right-addon col-xs-6"><i class="glyphicon glyphicon-search" aria-hidden="true"></i><input type="text" class="form-control" id="contactsearch" placeholder="Search" aria-label="search"></td>
                                 </tr>
                                 <tr class="row">
@@ -418,10 +418,10 @@
                 <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
