--- a/create_account.html
+++ b/create_account.html
@@ -102,21 +102,21 @@
                             <fieldset aria-label="enter account details">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-md-6">
-                                      <label for="email">Email Address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                      <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                       <input type="text" class="form-control" id="email" required>
                                   </div>
                                 </div>
                                 <div class="row">
                                     <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                        <label for="firstname">First Name <span class="weight600">&#42;</span></label>
+                                        <label for="firstname">First name <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="firstname" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
-                                        <label for="middlename">Middle Name</label>
+                                        <label for="middlename">Middle name</label>
                                         <input type="text" class="form-control" id="middlename">
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
-                                        <label for="lastname">Last Name <span class="weight600">&#42;</span></label>
+                                        <label for="lastname">Last name <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="lastname" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-4">
@@ -142,7 +142,7 @@
                                         <input type="text" class="form-control" id="password" required>
                                     </div>
                                     <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                        <label for="confirmpassword">Confirm Password <span class="weight600">&#42;</span></label>
+                                        <label for="confirmpassword">Confirm password <span class="weight600">&#42;</span></label>
                                         <input type="text" class="form-control" id="confirmpassword" required>
                                     </div>
                                 </div>
@@ -195,10 +195,10 @@
                 <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
