--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -168,7 +168,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h1>Declaration and Signature</h1>
-                            <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                            <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
                             <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                                 <label class="switch">
                                 <input class="togglesavemore" type="checkbox">
@@ -199,7 +199,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                        	<h4>Mark Image</h4>
+                                                        	<h4>Mark image</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<img src="images/scrubutts-09-a-68-a-jpg.jpg" alt="Scrubby Butts Soap company mark" class="img-responsive"> 
@@ -209,7 +209,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Mark Literal</h4>
+                                                            <h4>Mark literal</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Scrubby Butts Soap Co. Squeaky Clean Naturally!</p>
@@ -219,7 +219,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Mark Description</h4>
+                                                            <h4>Mark description</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">A stylized smiling baby boy with blonde hair sitting in a tan wash basin filled with blue water with blue bubbles. The wash basin intersects with two concentric ovals with the outer oval in tan and the inner oval in red. Inside the center oval is the wording &#8220;<span class="uppercase">scrubby butts soap co.</span>&#8221; in stylized font. Below the design element is the wording &#8220;<span class="uppercase">squeaky clean naturally!</span>&#8221; in red</p>
@@ -245,7 +245,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Entity Type</h4>
+                                                            <h4>Entity type</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Individual</p>
@@ -265,7 +265,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Email Address</h4>
+                                                            <h4>Email address</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">john.smith@gmail.com</p>
@@ -294,7 +294,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                        	<h4>International Class</h4>
+                                                        	<h4>International class</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
 															<p class="weight600">003</p>
@@ -314,7 +314,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>First Use Anywhere Date</h4>
+                                                            <h4>First use anywhere date</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">At least as early as 07/22/2017</p>
@@ -324,7 +324,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>First Use In Commerce Date</h4>
+                                                            <h4>First use in commerce date</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">At least as early as 07/22/2017</p>
@@ -354,7 +354,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Entity Type</h4>
+                                                            <h4>Entity type</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Individual</p>
@@ -374,7 +374,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Email Address</h4>
+                                                            <h4>Email address</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8 checkmargin">
                                                         	<p class="weight600">john.smith@gmail.com</p>
@@ -416,10 +416,10 @@
                                                             <label for="ta2" class="weight600">How are you signing the application?</label> 
                                                             <select class="form-control" id="signmethod">
                                                                 <option value="Select">Select Signature Method</option>
-                                                                <option value="direct">Sign Directly</option>
-                                                                <option value="handwritten">Print and Upload Handwritten Signature</option>
-                                                                <option value="send">Send to Second Party for Signature</option>
-                                                                <option value="unsigned">Submit Unsigned</option>
+                                                                <option value="direct">Sign directly</option>
+                                                                <option value="handwritten">Print and upload handwritten signature</option>
+                                                                <option value="send">Send to second party for signature</option>
+                                                                <option value="unsigned">Submit unsigned</option>
                                                             </select>
                                                        </div>
                                                     </div>
@@ -480,19 +480,19 @@
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                                                     <p class="sr-only">Enter the date in the following format: 20:36:14 May 30, 2019 E.T.</p>
-                                                                    <label for="datesigned">Date Signed <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                                    <label for="datesigned">Date signed <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                                     <textarea type="text" rows="2" class="form-control" placeholder="20:36:14 May 30, 2019 E.T." id="datesigned"></textarea>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
-                                                                    <label for="signatoryname">Signatory&#8217;s Name <span class="weight600">&#42;</span></label>
+                                                                    <label for="signatoryname">Signatory&#8217;s name <span class="weight600">&#42;</span></label>
                                                                     <input type="text" class="form-control" id="signatoryname" required>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-9 col-lg-6">
-                                                                    <label for="signatoryphone">Signatory&#8217;s Phone Number</label>
+                                                                    <label for="signatoryphone">Signatory&#8217;s phone number</label>
                                                                     <input type="text" class="form-control" id="signatoryphone">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
-                                                                    <label for="signatoryposition">Signatory&#8217;s Position <span class="weight600">&#42;</span></label>
+                                                                    <label for="signatoryposition">Signatory&#8217;s position <span class="weight600">&#42;</span></label>
                                                                     <input type="text" class="form-control" id="signatoryposition" required>
                                                                 </div>
                                                             </div><!--end checkbox row-->
@@ -549,10 +549,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
             	<div class="row">
                     <div class="col-xs-6">
-                        <span id="webPolicy"><p>Website Policy</p></span>
+                        <span id="webPolicy"><p>Website policy</p></span>
                     </div>
                     <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
