--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -168,7 +168,7 @@
                     <div class="row">
                         <div class="col-xs-8">
                             <h1>Filing Basis</h1>
-                            <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                            <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
                             <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                                 <label class="switch">
                                 <input class="togglesavemore" type="checkbox">
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <div class="col-xs-4">
-                            <label for="pagelayout">Page Layout</label>
+                            <label for="pagelayout">Page layout</label>
                             <select class="form-control" id="pagelayout">
                               <option value="Select">Select</option>
                               <option value="guided">Guided</option>
@@ -284,11 +284,11 @@
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <p class="weight600">Specify if you have a pending application, foreign registration, or both for this good/service.</p>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basisone">
-                                                                <label class="form-check-label form-check" for="pendingtwo_basisone"><span class="radio notspecial" id="pendtwo">Pending Foreign Application</span></label>
+                                                                <label class="form-check-label form-check" for="pendingtwo_basisone"><span class="radio notspecial" id="pendtwo">Pending foreign application</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="foreigntwo" tabindex="0" id="foreigntwo_basisone" aria-labelledby="forregtwo">
-                                                                <label class="form-check-label form-check" for="foreigntwo_basisone"><span class="radio notspecial" id="forregtwo">Foreign Registration</span></label>
+                                                                <label class="form-check-label form-check" for="foreigntwo_basisone"><span class="radio notspecial" id="forregtwo">Foreign registration</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="natwo" tabindex="0" aria-labelledby="notapptwo" id="natwo_basisone">
-                                                                <label class="form-check-label form-check" for="natwo_basisone"><span class="radio notspecial" id="notapptwo">Not Applicable</span></label>
+                                                                <label class="form-check-label form-check" for="natwo_basisone"><span class="radio notspecial" id="notapptwo">Not applicable</span></label>
                                                             </div>
                                                             <div class="col-xs-12">
                                                                 <div class="row holdsapending" aria-labelledby="foreignapplication">
@@ -457,11 +457,11 @@
                                                             <div class="col-xs-12 form-group form-group-md">
                                                                 <p class="weight600">Specify if you have a pending application, foreign registration, or both for this good/service.</p>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="pendingtwo" tabindex="0" aria-labelledby="pendtwo" id="pendingtwo_basistwo">
-                                                                <label class="form-check-label form-check" for="pendingtwo_basistwo"><span class="radio notspecial" id="pendtwo">Pending Foreign Application</span></label>
+                                                                <label class="form-check-label form-check" for="pendingtwo_basistwo"><span class="radio notspecial" id="pendtwo">Pending foreign application</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="foreigntwo" tabindex="0" id="foreigntwo_basistwo" aria-labelledby="forregtwo">
-                                                                <label class="form-check-label form-check" for="foreigntwo_basistwo"><span class="radio notspecial" id="forregtwo">Foreign Registration</span></label>
+                                                                <label class="form-check-label form-check" for="foreigntwo_basistwo"><span class="radio notspecial" id="forregtwo">Foreign registration</span></label>
                                                                 <input class="form-check-input checkmark" type="checkbox" value="natwo" tabindex="0" aria-labelledby="notapptwo" id="natwo_basistwo">
-                                                                <label class="form-check-label form-check" for="natwo_basistwo"><span class="radio notspecial" id="notapptwo">Not Applicable</span></label>
+                                                                <label class="form-check-label form-check" for="natwo_basistwo"><span class="radio notspecial" id="notapptwo">Not applicable</span></label>
                                                             </div>
                                                             <div class="col-xs-12">
                                                                 <div class="row holdsapending" aria-labelledby="foreignapplication">
@@ -623,10 +623,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
             	<div class="row">
                     <div class="col-xs-6">
-                        <span id="webPolicy"><p>Website Policy</p></span>
+                        <span id="webPolicy"><p>Website policy</p></span>
                     </div>
                     <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
