--- a/goods_and_services_video_M1.html
+++ b/goods_and_services_video_M1.html
@@ -178,10 +178,10 @@
                         	<p class="weight600" id="selectgss">Search through and select the goods and services that apply to your trademark, or provide a list.</p>
                             <div role="radiogroup" aria-labelledby="selectgss">
                                 <div class="radio form-group form-group-md">
-                                  <label for="searchmanual" class="radio-inline radiocontainer">Search ID Manual for Goods and Service<input type="radio" name="selectgs" id="searchmanual" value="searchman" tabindex="0"><span class="checkmark"></span></label>
+                                  <label for="searchmanual" class="radio-inline radiocontainer">Search ID manual for goods and service<input type="radio" name="selectgs" id="searchmanual" value="searchman" tabindex="0"><span class="checkmark"></span></label>
                                 </div>
                                 <div class="radio">
-                                  <label for="provideown" class="radio-inline radiocontainer disabled special">Provide Own Goods and Services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
+                                  <label for="provideown" class="radio-inline radiocontainer disabled special">Provide own goods and services<input type="radio" name="selectgs" id="provideown" value="provide" tabindex="0" disabled><span class="checkmark"></span></label>
                                 </div>
                             </div><!--END radiogroup-->
 						</div>
@@ -227,10 +227,10 @@
                 <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
