--- a/landing_page.html
+++ b/landing_page.html
@@ -99,8 +99,8 @@
                                   </div>
                                   <div class="maincontainer">
                                     <div class="form-group form-group-md">
-                                        <label for="uname"><b>Email Address</b></label>
-                                        <input type="text" class="form-control" placeholder="Enter Email Address" name="uname" required>
+                                        <label for="uname"><b>Email address</b></label>
+                                        <input type="text" class="form-control" placeholder="Enter Email address" name="uname" required>
                                     </div>
                                     <div class="form-group form-group-md">
                                         <label for="psw"><b>Password</b></label>
