--- a/layout_M7.html
+++ b/layout_M7.html
@@ -15,7 +15,6 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <!--    <link rel="stylesheet" th:href="@{/resources/css/usPTO.css}"/>
 --> <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">  
@@ -26,7 +25,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/lynnstyles.css">
-   
 </head>
 
 <body>
@@ -177,11 +175,11 @@
                     	<fieldset>
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-4">
-                                <label for="ownername">Owner Name <span class="weight600">&#42;</span></label>
+                                <label for="ownername">Owner name <span class="weight600">&#42;</span></label>
                                 <input type="text" class="form-control" id="ownername" th:field="*{firstName}" required>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                <label for="additionalname">Additional Name</label>
+                                <label for="additionalname">Additional name</label>
                                 <select class="form-control" id="additionalname" th:field="*{ownerType}">
                                   <option value="Select">Select</option>
                                   <option value="DBA">Doing Business As (DBA)</option>
@@ -191,7 +189,7 @@
                                 </select>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                <label for="stateoforg">State of Organization <span class="weight600">&#42;</span></label>
+                                <label for="stateoforg">State of organization <span class="weight600">&#42;</span></label>
                                 <select class="form-control" id="stateoforg" required>
                                   <option value="Select">Select</option>
                                   <option value="AL">Alabama</option>
@@ -216,15 +214,15 @@
                         <fieldset>
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                <label for="firstname">First Name <span class="weight600">&#42;</span></label>
+                                <label for="firstname">First name <span class="weight600">&#42;</span></label>
                                 <input type="text" class="form-control" id="firstname" required>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-3">
-                                <label for="middlename">Middle Name</label>
+                                <label for="middlename">Middle name</label>
                                 <input type="text" class="form-control" id="middlename" th:field="*{middleName}">
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
-                                <label for="lastname">Last Name <span class="weight600">&#42;</span></label>
+                                <label for="lastname">Last name <span class="weight600">&#42;</span></label>
                                 <input type="text" class="form-control" id="lastname" th:field="*{lastName}" required>
                               </div>
                               <div class="form-group form-group-md col-xs-6">
@@ -244,7 +242,7 @@
                                 </select>
                               </div>
                               <div class="form-group form-group-md col-xs-6">
-                                <label for="countryofcitizenship">Country of Citizenship</label>
+                                <label for="countryofcitizenship">Country of citizenship</label>
                                 <select class="form-control" id="countryofcitizenship" th:field="*{ownerCitizenShip}">
                                   <option value="United States">United States</option>
                                   <option value="Canada">Canada</option>
@@ -261,7 +259,7 @@
                     <fieldset>
                     	<div class="row">
                           <div class="form-group form-group-md col-xs-12 col-lg-7">
-                            <label for="territory">Country/US Territory <span class="weight600">&#42;</span></label>
+                            <label for="territory">Country/US territory <span class="weight600">&#42;</span></label>
                             <select class="form-control" id="territory">
                               <option value="United States">United States</option>
                               <option value="Afghanistan">Afghanistan</option>
@@ -275,15 +273,15 @@
                             </select>
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-lg-8">
-                            <label for="addressline1">Address Line 1 <span class="weight600">&#42;</span></label>
+                            <label for="addressline1">Address line 1 <span class="weight600">&#42;</span></label>
                             <input type="text" class="form-control" id="addressline1" th:field="*{ownerAddress1}" required>
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-lg-8">
-                            <label for="addressline2">Address Line 2</label>
+                            <label for="addressline2">Address line 2</label>
                             <input type="text" class="form-control" id="addressline2" th:field="*{ownerAddress2}">
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-lg-8">
-                            <label for="addressline3">Address Line 3</label>
+                            <label for="addressline3">Address line 3</label>
                             <input type="text" class="form-control" id="addressline3" th:field="*{ownerAddress3}">
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
@@ -300,7 +298,7 @@
                             </select>
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                            <label for="zipcode">Zip Code <span class="weight600">&#42;</span></label>
+                            <label for="zipcode">Zip code <span class="weight600">&#42;</span></label>
                             <input type="text" class="form-control" id="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}" required>
                           </div>
                        	</div>
@@ -314,17 +312,17 @@
                     <fieldset>
                     	<div class="row">
                           <div class="form-group form-group-md col-xs-12 col-md-6">
-                            <label for="email">Email Address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                            <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                             <input type="text" class="form-control" id="email" th:field="*{ownerEmail}" required>
                           </div>
                           <div class="form-group form-group-md col-xs-12 col-md-6">
-                            <label for="webaddress">Website Address</label>
+                            <label for="webaddress">Website address</label>
                             <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
                           </div>
                           <div class="row">
                               <div class="col-xs-12">
                                   <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                    <label for="phonenumbertype">Phone Type</label>
+                                    <label for="phonenumbertype">Phone type</label>
                                     <select class="form-control" id="phonenumbertype">
                                       <option value="Type">Type</option>
                                       <option value="Cell">Cell</option>
@@ -334,7 +332,7 @@
                                     </select>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-6">
-                                    <label for="phonenumber">Phone Number</label>
+                                    <label for="phonenumber">Phone number</label>
                                     <input type="text" class="form-control" id="phonenumber" th:field="*{ownerPhone}">
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-2 col-lg-2">
@@ -385,10 +383,10 @@
                 <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
