--- a/login_loginmodal.html
+++ b/login_loginmodal.html
@@ -106,8 +106,8 @@
                           </div>
                           <div class="maincontainer">
                             <div class="form-group form-group-md">
-                                <label for="uname"><b>Email Address</b></label>
-                                <input type="text" class="form-control" placeholder="Enter Email Address" name="uname" required>
+                                <label for="uname"><b>Email address</b></label>
+                                <input type="text" class="form-control" placeholder="Enter Email address" name="uname" required>
                             </div>
                             <div class="form-group form-group-md">
                                 <label for="psw"><b>Password</b></label>
@@ -142,8 +142,8 @@
                               </div>
                               <div class="maincontainer">
                                 <div class="form-group form-group-md">
-                                    <label for="uname"><b>Email Address</b></label>
-                                    <input type="text" class="form-control" placeholder="Enter Email Address" name="uname" required>
+                                    <label for="uname"><b>Email address</b></label>
+                                    <input type="text" class="form-control" placeholder="Enter Email address" name="uname" required>
                                 </div>
                                 <div class="form-group form-group-md">
                                     <label for="psw"><b>Password</b></label>
@@ -192,10 +192,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
