--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -165,7 +165,7 @@
                 </section>
             </div>
           	<h1>Trademark Details &#8211; Design with Text</h1>
-            <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+            <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
             <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                 <label class="switch">
                 <input class="togglesavemore" type="checkbox">
@@ -354,10 +354,10 @@
                     <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
