--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -165,7 +165,7 @@
                 </div>
                 <h1>Trademark Details &#8211; Stylized</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
-                <p class="instructions" id="costsavingoptions">Reduced Fee Mode</p>
+                <p class="instructions" id="costsavingoptions">Reduced fee mode</p>
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                     <input class="togglesavemore" type="checkbox">
@@ -403,15 +403,15 @@
                                                                             <button type="button" class="btn btn-sm close resetnamebtn" aria-label="remove this name"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                                                            <label for="firstname">First Name</label>
+                                                                            <label for="firstname">First name</label>
                                                                             <input type="text" class="form-control" id="firstname">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                                                            <label for="middlename">Middle Name</label>
+                                                                            <label for="middlename">Middle name</label>
                                                                             <input type="text" class="form-control" id="middlename">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-4">
-                                                                            <label for="lastname">Last Name</label>
+                                                                            <label for="lastname">Last name</label>
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
@@ -436,15 +436,15 @@
                                                                             <button type="button" class="btn btn-sm close resetportraitbtn" aria-label="remove this portrait"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                                                            <label for="firstname">First Name</label>
+                                                                            <label for="firstname">First name</label>
                                                                             <input type="text" class="form-control" id="firstname">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                                                            <label for="middlename">Middle Name</label>
+                                                                            <label for="middlename">Middle name</label>
                                                                             <input type="text" class="form-control" id="middlename">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-4">
-                                                                            <label for="lastname">Last Name</label>
+                                                                            <label for="lastname">Last name</label>
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
@@ -469,15 +469,15 @@
                                                                             <button type="button" class="btn btn-sm close resetsignaturebtn" aria-label="remove this signature"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                                                            <label for="firstname">First Name</label>
+                                                                            <label for="firstname">First name</label>
                                                                             <input type="text" class="form-control" id="firstname">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-4 col-lg-4">
-                                                                            <label for="middlename">Middle Name</label>
+                                                                            <label for="middlename">Middle name</label>
                                                                             <input type="text" class="form-control" id="middlename">
                                                                         </div>
                                                                         <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-4">
-                                                                            <label for="lastname">Last Name</label>
+                                                                            <label for="lastname">Last name</label>
                                                                             <input type="text" class="form-control" id="lastname">
                                                                         </div>
                                                                     </div>
@@ -574,10 +574,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
             	<div class="row">
                     <div class="col-xs-6">
-                        <p id="webPolicy">Website Policy</p>
+                        <p id="webPolicy">Website policy</p>
                     </div>
                     <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
