--- a/owner_info_corporation.html
+++ b/owner_info_corporation.html
@@ -176,7 +176,7 @@
                             <fieldset aria-labelledby="ownerinfo">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-4">
-                                    <label for="ownername">Owner Name <span class="weight600">&#42;</span></label>
+                                    <label for="ownername">Owner name <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="ownername" th:field="*{firstName}" required>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
@@ -190,7 +190,7 @@
                                     </select>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-sm-6 col-lg-4">
-                                    <label for="countryoforg">Country of Incorporation <span class="weight600">&#42;</span></label>
+                                    <label for="countryoforg">Country of incorporation <span class="weight600">&#42;</span></label>
                                     <select class="form-control" id="countryoforg" required>
                                       <option value="Select">Select</option>
                                       <option value="bahamas">Bahamas</option>
@@ -206,14 +206,14 @@
                             </div>
                             <div class="row">
                                 <div class="form-group form-group-md col-xs-12 col-md-6">
-                                    <label for="email">Email Address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
+                                    <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
                                     <input type="text" class="form-control" id="email" th:field="*{ownerEmail}" required>
                                 </div>
                             </div>
                             <fieldset aria-labelledby="addressinfo">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-lg-7">
-                                    <label for="territory">Country/US Territory</label>
+                                    <label for="territory">Country/US territory</label>
                                     <select class="form-control" id="territory">
                                       <option value="United States">United States</option>
                                       <option value="Afghanistan">Afghanistan</option>
@@ -228,15 +228,15 @@
                                     </select>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-lg-8">
-                                    <label for="addressline1">Address Line 1 <span class="weight600">&#42;</span></label>
+                                    <label for="addressline1">Address line 1 <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="addressline1" th:field="*{ownerAddress1}" required>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-lg-8">
-                                    <label for="addressline2">Address Line 2</label>
+                                    <label for="addressline2">Address line 2</label>
                                     <input type="text" class="form-control" id="addressline2" th:field="*{ownerAddress2}">
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-lg-8">
-                                    <label for="addressline3">Address Line 3</label>
+                                    <label for="addressline3">Address line 3</label>
                                     <input type="text" class="form-control" id="addressline3" th:field="*{ownerAddress3}">
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-12 col-lg-5">
@@ -248,13 +248,13 @@
                                     <input type="text" class="form-control" id="state" th:field="*{ownerState}" required>
                                   </div>
                                   <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
-                                    <label for="zipcode">Zip Code <span class="weight600">&#42;</span></label>
+                                    <label for="zipcode">Zip code <span class="weight600">&#42;</span></label>
                                     <input type="text" class="form-control" id="zipcode" placeholder="XXXXX" th:field="*{ownerZipcode}" required>
                                   </div>
                                   <div class="row">
                                     <div class="col-xs-12">
                                         <div class="form-group form-group-md col-xs-12 col-md-6">
-                                            <label for="webaddress">Website Address</label>
+                                            <label for="webaddress">Website address</label>
                                             <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
                                         </div>
                                     </div>
@@ -262,7 +262,7 @@
                                   <div class="row phones">
                                     <div class="col-xs-12">
                                         <div class="form-group form-group-md col-xs-6 col-sm-3">
-                                            <label for="phonenumbertype">Phone Type</label>
+                                            <label for="phonenumbertype">Phone type</label>
                                             <select class="form-control" id="phonenumbertype">
                                             <option value="Type">Type</option>
                                             <option value="Cell">Cell</option>
@@ -272,7 +272,7 @@
                                             </select>
                                         </div>
                                         <div class="form-group form-group-md col-xs-6 col-sm-4">
-                                            <label for="phonenumber">Phone Number</label>
+                                            <label for="phonenumber">Phone number</label>
                                             <input type="text" class="form-control" id="phonenumber">
                                         </div>
                                         <div class="form-group form-group-md col-xs-9 col-sm-3">
@@ -335,10 +335,10 @@
                 <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
