--- a/review_application.html
+++ b/review_application.html
@@ -201,7 +201,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                        	<h4>Mark Image</h4>
+                                                        	<h4>Mark image</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<img src="images/scrubutts-09-a-68-a-jpg.jpg" alt="Scrubby Butts Soap company mark" class="img-responsive"> 
@@ -211,7 +211,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Mark Literal</h4>
+                                                            <h4>Mark literal</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Scrubby Butts Soap Co. Squeaky Clean Naturally!</p>
@@ -221,7 +221,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Mark Description</h4>
+                                                            <h4>Mark description</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">A stylized smiling baby boy with blonde hair sitting in a tan wash basin filled with blue water with blue bubbles. The wash basin intersects with two concentric ovals with the outer oval in tan and the inner oval in red. Inside the center oval is the wording &#8220;<span class="uppercase">scrubby butts soap co.</span>&#8221; in stylized font. Below the design element is the wording &#8220;<span class="uppercase">squeaky clean naturally!</span>&#8221; in red</p>
@@ -247,7 +247,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Entity Type</h4>
+                                                            <h4>Entity type</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Individual</p>
@@ -267,7 +267,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Email Address</h4>
+                                                            <h4>Email address</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">john.smith@gmail.com</p>
@@ -296,7 +296,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                        	<h4>International Class</h4>
+                                                        	<h4>International class</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
 															<p class="weight600">003</p>
@@ -316,7 +316,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>First Use Anywhere Date</h4>
+                                                            <h4>First use anywhere date</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">At least as early as 07/22/2017</p>
@@ -326,7 +326,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>First Use In Commerce Date</h4>
+                                                            <h4>First use in commerce date</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">At least as early as 07/22/2017</p>
@@ -356,7 +356,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Entity Type</h4>
+                                                            <h4>Entity type</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8">
                                                         	<p class="weight600">Individual</p>
@@ -376,7 +376,7 @@
                                                 <div class="col-xs-12">
                                                     <div class="row">
                                                         <div class="col-xs-12 col-sm-4">
-                                                            <h4>Email Address</h4>
+                                                            <h4>Email address</h4>
                                                         </div>
                                                         <div class="col-xs-12 col-sm-8 checkmargin">
                                                         	<p class="weight600">john.smith@gmail.com</p>
@@ -455,10 +455,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
             	<div class="row">
                     <div class="col-xs-6">
-                        <span id="webPolicy"><p>Website Policy</p></span>
+                        <span id="webPolicy"><p>Website policy</p></span>
                     </div>
                     <div class="col-xs-6">
-                        <p>Privacy Policy</p>
+                        <p>Privacy policy</p>
                     </div>
                 </div>
             </div>
