--- a/submission_successful.html
+++ b/submission_successful.html
@@ -149,10 +149,10 @@
             <div class="col-xs-8 col-sm-4 col-md-3">
                 	<div class="row">
                         <div class="col-xs-6">
-                            <p><span id="webPolicy">Website Policy</span></p>
+                            <p><span id="webPolicy">Website policy</span></p>
                         </div>
                         <div class="col-xs-6">
-                            <p>Privacy Policy</p>
+                            <p>Privacy policy</p>
                         </div>
                     </div>
                 </div>
